--- a/launcher.css
+++ b/launcher.css
@@ -23,6 +23,17 @@ img {
     border:0;
     margin:0;
 }
+
+.logo {
+    background-image: url('https://i.ibb.co/xztKHH7/CE-LOGO-V13.png');
+    background-size: contain;
+    background-repeat: no-repeat;
+    width: 400px; /* Adjust width as needed */
+    height: 200px; /* Adjust height as needed */
+    text-indent: -9999px; /* Hide text */
+    background-position: -20px 30px; /* Adjust position as needed */
+}
+
 .sidebar {
     padding: 10px;
     vertical-align: top;
